second commit: gooo

--- a/pages/skills/skills.html
+++ b/pages/skills/skills.html
@@ -24,8 +24,8 @@
                 </li>
 
                 <li>
-                    <a href="#">
-                        Frameworks
+                    <a href="topics/frameworks.html">
+                        Frameworks e Plataformas
                     </a> 
                 </li>
 
